--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
 html,
 body {
   padding: 0;
@@ -63,8 +58,8 @@ a {
   /* margin-right: 5rem; */
   height: 8vh;
   width: 125%;
-  /* margin-right: 3rem; */
-  margin-left: -3rem;
+  margin-right: 3rem;
+  margin-left: 10rem;
   /* border: 2px solid red; */
 }
  
@@ -144,9 +139,10 @@ a {
   text-decoration: none;
 }
 .btn-grad1 {
-  background-image: linear-gradient(to right, #00000046 0%, #75e6d78f 51%, #09ecb349 100%);
+  background-image: linear-gradient(to right, #00000046 0%, #045e578f 51%, #09ecb349 100%);
   margin: 1px;
   padding: 5px 5px;
+  
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -629,22 +625,24 @@ li {
 
 /* ********** About ************* */
 .about-header {
-  background-image: url("../public/images/header-2.jpg");
-  background: #03002f;
+  background-image: url("../public/images/hero_about.jpg");
+  /* background: #03002f; */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 40vh;
-  color: #fff;
+  color: #0ef0dd;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
 
 .about-header p {
-  font-weight: 200;
-  color: #fff;
+  font-weight: 600;
+  font-size: large;
+  color: #fffffff3;
+  margin-right: 300px;
 }
 
 .offer-main {
@@ -1732,53 +1730,6 @@ form .btn-grad {
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 /* @media only screen and (min-width: 1200px) {...} */
 
-.replacement {
-  background-image: url('/public/Replacement_background.jpg');
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  padding: 20px;
-}
-
-.replacement1 {
-  width: 536px;
-  height: 1060px;
-}
-
-.replacement2 {
-  width: 40%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.cards3 {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-items: center;
-  gap: 40px;
-}
-
-@media only screen and (max-width: 600px) {
-  .replacement {
-    display: block;
-  }
-
-  .replacement1 {
-    height: auto;
-  }
-
-  .replacement2 {
-    width: 100%;
-  }
-}
-
-
 @media only screen and (min-width: 993px) and (max-width :1199px) {
 
   #navbar{
@@ -1790,9 +1741,9 @@ form .btn-grad {
     
     /* margin-right: 5rem; */
     height: 6vh;
-    width : 200px;
+    width : 100px;
     /* margin-right: 3rem; */
-    margin-left: -4rem;
+    margin-left: 1rem;
     /* border: 2px solid red; */
     margin-bottom: 1rem;
   }
@@ -2403,6 +2354,52 @@ form .btn-grad {
     
     .card1 {
       width: 100%;
-    }*/
-  } 
-
+    }
+  } */
+  .replacement {
+    background-image: url('/public/Replacement_background.jpg');
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 20px;
+  }
+  
+  .replacement1 {
+    width: 536px;
+    height: 1060px;
+  }
+  
+  .replacement2 {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .cards3 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    gap: 40px;
+  }
+  
+  @media only screen and (max-width: 600px) {
+    .replacement {
+      display: block;
+    }
+  
+    .replacement1 {
+      height: auto;
+    }
+  
+    .replacement2 {
+      width: 100%;
+    }
+  }
+  
+}
