--- a/styles/secondglobals.css
+++ b/styles/secondglobals.css
@@ -1,3 +1,31 @@
 .footer-cart{
     background-color: black;
 }
+.card-hover:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.Meet-card{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    
+}
+.hov-cod:hover{
+    background-color: #174646f1;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+.card-hover{
+    width: '42%';
+}
+
+@media only screen and (max-width: 600px) {
+    .Meet-card{
+        display: block;
+    }
+  }
